# BIMCoreEditor

./: .gitignore  CMakeLists.txt  CMakePresets.json  app.manifest  imgui.ini  settings.ini  test.ifc
apps/editor/: AppUI.cpp  AppUI.h  EditorApp.cpp  EditorApp.h  EngineConfig.cpp  EngineConfig.h  InputController.cpp  InputController.h  main.cpp  settings.ini
apps/editor/ui/: UIMainPanel.cpp  UIMainPanel.h  UIPropertiesPanel.cpp  UIPropertiesPanel.h  UIState.h  UIStatusOverlay.cpp  UIStatusOverlay.h
sdk/src/graphics/: GraphicsContext.cpp  GraphicsContext.h  ShaderLibrary.h
sdk/src/platform/: Window.cpp  Window.h
sdk/src/scene/: BimDocument.cpp  BimDocument.h  Camera.cpp  Camera.h  CsvImporter.h  FormatModules.cpp  FormatModules.h  IfcExporter.cpp  IfcExporter.h  IfcLoader.cpp  IfcLoader.h  Raycaster.cpp  Raycaster.h
src/core/: CommandHistory.cpp  CommandHistory.h  Core.h  EditorApp.cpp  EditorApp.h  EngineConfig.cpp  EngineConfig.h
src/graphics/: Camera.cpp  Camera.h  GPUResourceManager.cpp  GPUResourceManager.h  GraphicsContext.cpp  GraphicsContext.h  PipelineManager.cpp  PipelineManager.h  ShaderLibrary.h
src/input/: InputController.cpp  InputController.h
src/io/: BcfImporter.cpp  BcfImporter.h  CsvImporter.cpp  Exporter3MF.cpp  Exporter3MF.h  GltfExporter.cpp  GltfExporter.h  GltfImporter.cpp  GltfImporter.h  IfcExporter.cpp  IfcExporter.h  IfcLoader.cpp  IfcLoader.h  Importer3MF.cpp  Importer3MF.h  StlExporter.cpp  StlExporter.h  StlImporter.cpp  StlImporter.h
src/platform/: Window.cpp
src/scene/: Raycaster.cpp  Raycaster.h  SceneContext.cpp  SceneContext.h  SceneModel.cpp  SceneModel.h
src/ui/: AppUI.cpp  AppUI.h  UICommandPanel.cpp  UICommandPanel.h  UIGizmoOverlay.cpp  UIGizmoOverlay.h  UIMainPanel.cpp  UIMainPanel.h  UIModelTree.cpp  UIModelTree.h  UIPropertiesPanel.cpp  UIPropertiesPanel.h  UISearchPanel.cpp  UISearchPanel.h  UIState.h  UIStatusOverlay.cpp  UIStatusOverlay.h  UIToolbar.cpp  UIToolbar.h
tests/: test_command_history.cpp  test_command_panel.cpp  test_ifc_custom_properties.cpp  test_ifc_delete_roundtrip.cpp  test_ifc_roundtrip.cpp  test_input_math.cpp  test_property_state.cpp  test_search.cpp  test_search_panel.cpp  test_state_commands.cpp
tests/data/: temp_custom_pset.ifc  temp_wall_delete_output.ifc  temp_wall_output.ifc
